@@ -26,8 +26,6 @@ export(estimateEvenness)
 export(estimateFaith)
 export(estimateRichness)
 export(full_join)
-export(getAbundanceFeature)
-export(getAbundanceSample)
 export(getBestDMNFit)
 export(getDMN)
 export(getExperimentCrossAssociation)
@@ -125,8 +123,6 @@ exportMethods(estimateEvenness)
 exportMethods(estimateFaith)
 exportMethods(estimateRichness)
 exportMethods(full_join)
-exportMethods(getAbundanceFeature)
-exportMethods(getAbundanceSample)
 exportMethods(getBestDMNFit)
 exportMethods(getDMN)
 exportMethods(getExperimentCrossAssociation)
